--- a/aspnet-core/src/Autoboxd.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Autoboxd.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Autoboxd;Trusted_Connection=True"
+    "Default": "Server=localhost;Database=Autoboxd;Trusted_Connection=True"
   },
   "IdentityServer": {
     "Clients": {
