--- a/aspnet-core/src/Autoboxd.Web/appsettings.json
+++ b/aspnet-core/src/Autoboxd.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44349"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Autoboxd;Trusted_Connection=True"
+    "Default": "Server=localhost;Database=Autoboxd;Trusted_Connection=True"
   },
   "AuthServer": {
     "Authority": "https://localhost:44349",
