--- a/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
+++ b/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="4.4.3" />
   </ItemGroup>
 
   <ItemGroup>
