--- a/aspnet-core/src/Autoboxd.EntityFrameworkCore/Autoboxd.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Autoboxd.EntityFrameworkCore/Autoboxd.EntityFrameworkCore.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.EntityFrameworkCore" Version="4.4.3" />
     <ProjectReference Include="..\Autoboxd.Domain\Autoboxd.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.4.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.3" />
