--- a/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
+++ b/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
@@ -45,7 +45,7 @@
     <ProjectReference Include="..\Autoboxd.Application\Autoboxd.Application.csproj" />
     <ProjectReference Include="..\Autoboxd.HttpApi\Autoboxd.HttpApi.csproj" />
     <ProjectReference Include="..\Autoboxd.EntityFrameworkCore\Autoboxd.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.3" />
+    <ProjectReference Include="..\Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic\Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic.csproj" />
     <PackageReference Include="Volo.Abp.Autofac" Version="4.4.3" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.3" />
     <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.3" />
