--- a/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
+++ b/aspnet-core/src/Autoboxd.Web/Autoboxd.Web.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Articles\" />
+    <Folder Include="Pages\Reviews\" />
+    <Folder Include="Pages\Lists\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
