--- a/aspnet-core/src/Autoboxd.Application/Autoboxd.Application.csproj
+++ b/aspnet-core/src/Autoboxd.Application/Autoboxd.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="4.4.3" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="4.4.3" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.4.3" />
